--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 20 16:39:24 CST 2020
-sdk.dir=C\:\\Users\\shaochuankai\\AppData\\Local\\Android\\Sdk
+#Mon Dec 21 11:35:05 CST 2020
+sdk.dir=/Users/shaochuankai/Library/Android/sdk
