--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -20,6 +20,11 @@ android {
         enabled true
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+
 
     buildTypes {
         debug {
