添加一些工具类

--- a/architecture/src/main/AndroidManifest.xml
+++ b/architecture/src/main/AndroidManifest.xml
@@ -3,4 +3,24 @@
 
     /
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+
+    <!--8.0允许安装未知来源应用 在版本更新安装apk时用到-->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+
+
+
+    <application>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+    </application>
+
 </manifest>
