--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-//apply plugin: 'android-aspectjx'
+apply plugin: 'android-aspectjx'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -34,8 +34,23 @@ android {
     }
 }
 
+
+aspectjx {
+    exclude 'com.umeng.commonsdk'
+    exclude 'com.umeng.analytics'
+    exclude 'com.tencent.bugly'
+    exclude 'com.alipay.sdk'
+    exclude 'com.tencent.mm.opensdk'
+    exclude 'cn.jpush'
+    exclude 'cn.jcore'
+    exclude 'versions.9'
+    enabled true    //aop开关
+}
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
