--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     api rootProject.ext.androidDependencies.lifecycleProcess
     api rootProject.ext.androidDependencies.lifecycleCommon
 
+
+    implementation rootProject.ext.androidDependencies.palette
+
     api rootProject.ext.dependencies.timber
 
     api project(path: ':service')
