--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.CacheActivity"></activity>
+        <activity android:name=".view.FragmentDemoActivity"></activity>
+        <activity android:name=".view.CacheActivity" />
         <activity android:name=".view.SearchActivity" />
         <activity android:name=".view.TestActivity" />
         <activity android:name=".view.ListActivity" />
